--- a/package.json
+++ b/package.json
@@ -24,12 +24,18 @@
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/sequelize": "^10.0.1",
     "@nestjs/swagger": "^7.3.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
+    "pg": "^8.11.5",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "sequelize": "^6.37.2",
+    "sequelize-cli": "^6.6.2",
+    "sequelize-hierarchy": "^2.0.4",
+    "sequelize-typescript": "^2.1.6"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
